kled_derive/tests/ui/fails/unnamend_fields.stderr
error: `#[operator]` deriving from structs with unnamed fields is not yet implemented
 --> $DIR/unnamend_fields.rs:5:24
  |
5 | pub struct Map<UnaryOp>(UnaryOp);
  |                        ^^^^^^^^^
